[package]
name = "simple-yaml-parser"
version = "0.0.1"
edition = "2021"
description = "No allocation YAML key value parser with comment support"
authors = ["Ben <kaleidawave@gmail.com>"]
license = "MIT"
keywords = ["yaml", "yml"]
categories = ["parser-implementations"]
repository = "https://github.com/kaleidawave/simple-yaml-parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
path = "lib.rs"

[lints.clippy]
pedantic = "deny"
